# ACSR

./: .coveragerc  .gitignore  =1.3.0  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  best_seq2seq_model.pth  job.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/_build/doctrees/: authors.doctree  changelog.doctree  contributing.doctree  index.doctree  license.doctree  readme.doctree
docs/_build/doctrees/api/: acsr.data.doctree  acsr.doctree  acsr.models.doctree  acsr.utils.doctree  modules.doctree
docs/_build/html/: .buildinfo  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_static/: .gitignore
docs/api/: acsr.data.rst  acsr.models.rst  acsr.rst  acsr.utils.rst  modules.rst
src/acsr/: __init__.py  add_shape_and_pos_to_events_files.py  all_candidates.txt  build_dataset_for_ml_models.ipynb  build_frames_for_annotations.py  build_ipa_sentence_with_whisper_and_mfa.py  cbow_lm.py  config.py  convert_webm_to_mp4  convert_webm_to_mp4.py  create_training_videos_from_word_videos.py  decode kd.ipynb  decode.ipynb  decode.py  decoder_lm.py  decoding copy 2.py  decoding copy.py  decoding.py  decoding_copy.py  decoding_gesture_level.py  decoding_gestures.py  decoding_grid_search.py  decoding_grid_search_only_lips.py  decoding_mlm.py  decoding_no_attention.py  decoding_no_lips.py  extract_training_coordinates.py  extract_training_features.py  extract_wav_from_video.py  find_onsets.py  gesture_detection.py  grid_search.sh  indices.npy  job.sh  job_cpu.sh  job_gpu.sh  labels.txt  main.py  mark_video.py  mlm.py  (+20 more)
src/acsr/.ipynb_checkpoints/: build_dataset_for_ml_models-checkpoint.ipynb  speech_recognition_from_video-checkpoint.ipynb
src/acsr/data/: __init__.py  dataloader.py  dataset.py
src/acsr/logs/: all_candidates.txt
src/acsr/models/: __init__.py  acoustic_model.py  conformer.py  language_model.py
src/acsr/utils/: __init__.py  decoding_utils.py  metrics.py  text_processing.py
src/acsr/wandb/: latest-run
stimuli/words/txt/: test.lpc
tests/: conftest.py  test_skeleton.py
trained_models/: model_lr_position_female_cropped.pkl  model_lr_shape_female_cropped.pkl  model_rf_position.pkl  model_rf_shape.pkl
(+17 files in other folders)
