[tool.poetry]
name = "acsr"
version = "0.1.0"
description = ""
authors = ["Boubacar Sow <boubasow.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
keras = "^3.7.0"
pyaudio = "^0.2.14"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
praat-textgrids = "^1.4.0"
scipy = "^1.14.1"
tqdm = "^4.67.1"
opencv-python = "^4.10.0.84"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.4"
pyscaffold = "^4.6"
sphinx = "^8.1.3"
setuptools = "^75.6.0"
pyproject-hooks = "1.0.0"
numpy = "1.26.4"
msvc-runtime = "^14.42.34433"
mediapipe = "0.10.5"
scikit-learn = "1.2.1"
tox = "^4.23.2"
torch = "^2.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
